kustomize-units/oauth2-init/thanos-sso-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-sso-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ${THANOS_DNS}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 80
  tls:
    - secretName: thanos-tls
      hosts:
      - ${THANOS_DNS}
